docs/cartool.css
/*-------------------- Cartool CSS */


/*-------------------- Navigation bar styles --------------------*/

nav {
	font-family: Tahoma, Geneva, sans-serif;
	font-size:10pt;

    background-color: #f9f9f9;
    color: white;

    padding: 0px 0px;

    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    width: 180px;

    display: flex;
    flex-direction: column;
    align-items: flex-start;
	border-right: 1px solid #ddd;
	
	box-sizing: border-box;

    line-height: 1.6;
}

.nav-title {
	font-family: Arial, sans-serif;
    font-size: 18pt;
    font-weight: bold;
    display: flex;
    align-items: center;
    padding: 12px 16px;
    color: #1155E0;
    box-sizing: border-box;
	text-decoration: none;
}

.nav-title:hover {
    background-color: #ddd;
	text-decoration: none;
}

.nav-title img {
    width: 20px;
    height: 20px;
    margin-left: 11px;
    margin-right: 10px;
    margin-top: -2px;
}


nav a {
    color: #333333;
    text-decoration: none;
	padding: 4px 20px;
	display: block;
    width: 100%;
    box-sizing: border-box;
}

nav a:hover {
	background-color: #ddd;
    border-radius: 4px;
}

.active {
    font-weight: bold;
    border-left: 8px solid #1155E0;
    background-color: #e0e8ff;
    padding-left: 12px;
    border-radius: 4px;
}

						/* iframe left menu inclusion */
.menu-iframe {
    padding: 0px 0px;

    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    width: 180px;
}  


/*-------------------- All pages: page size limit and centering --------------------*/

body {
	margin: 0;
	padding: 0;
	display: flex;
	justify-content: center;					/* Center the content horizontally */
	background-color: #f9f9f9;					/* Optional: Background color */
	}

.container {
	width: 90%;									/* Adjust width relative to the viewport */
    max-width: 1000px;							/* Ensure a readable limit on larger screens */
	padding: 20px;								/* Add padding for spacing */
    margin-top: 8px;							/* Add space at the top */
	background-color: #ffffff;					/* Optional: Background color */
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);	/* Optional: Add a subtle shadow */

    margin-left: 180px;
	}


/*-------------------- Headers --------------------*/

h1, .mvd-h1 {
    font-family: Arial, Verdana;
    font-size: 22pt;
    color: #224488;
    font-weight: bold;

    padding: 14pt 24pt;
	margin: 10px 0 25px 0;

    background: linear-gradient(90deg, #DCEEFF, #A0CFFF);
    border: 1px solid #6AA9E0;
    border-radius: 14px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);

    line-height: 1.3;
}


h2, .mvd-h2 {
	font-family:Arial,Verdana;
	font-size:16pt;
	color:#1155E0;
	font-weight:bold;

	margin:50pt 7pt 25pt 0pt;
	padding:7pt 0pt 7pt 11pt;

	background-color:#EFF3FF;

	border-width:0pt 0pt 1pt 1pt;
	border-left-style:solid;
	border-bottom-style:solid;
	border-left-color:#1155E0;
	border-bottom-color:#1155E0;
/*    border: none;*/

    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
    border-radius: 8px;

    line-height: 1.2;
	}


h3, .mvd-h3 {
	font-family:Arial,Verdana;
	font-size:14pt;
	color:#1155E0;
	font-weight:bold;

	max-width: 80%;
	margin: 18px 10px;
    padding: 8px 12px;

	background-color:#ffffff;
	
/*	border-width:0pt 0pt 1pt 0pt;
	border-bottom-style:solid;
	border-bottom-color:#8CAFFF;*/

    border-left: 4px solid #4A90E2;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);

    line-height: 1.2;
    }


h4, .mvd-h4 {
	font-family:Arial,Verdana;
	font-size:12pt;
	color:#2060E0;
	font-weight:normal;

	max-width: 45%;
    margin: 15px 10px;
    padding: 6px 10px;

	border-width:0pt 0pt 1pt 1pt;
	border-bottom-style:solid;
	border-bottom-color:#dddddd;

    border-left: 3px solid #6C6C6C;
    border-radius: 4px;

    line-height: 1.2;
	}


h5, .mvd-h5 {
	font-family:Verdana,Arial;
	font-size:10pt;
    color: #333333;
	font-weight:bold;
	
    margin: 8px 10px;
    padding: 4px 12px;

    line-height: 1.2;
	}


h6, .mvd-h6 {
	font-family:Verdana,Arial;
	font-size:10pt;
	color:#1155E0;
	font-weight:normal;
	
	margin: 0pt 0pt 0pt 32pt;
	padding:0pt;

    line-height: 1.1;
	}


/*-------------------- Normal text --------------------*/

normal, p, .mvd-normal, .mvd-p {
	font-family: Verdana,Arial,Helvetica;
	font-size: 10pt;
    color: #333333;
	font-weight: normal;
	font-style: normal;
	
	margin: 5pt 5% 5pt 5pt;
	padding: 0pt;

    line-height: 1.6;
}



/*-------------------- List and Bullets --------------------*/
									/* List and Bullets */
li, ul, ol, .mvd-li, .mvd-ul {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 10pt;
    color: #333333;
    font-weight: normal;

    margin: 2px 5% 0px 20px;
	padding:0pt;
    line-height: 1.6;
}
/*
									/* Unordered List (Bullets) * /
ul, .mvd-ul {
    list-style-type: disc; 			/* Default bullet style * /
    list-style-position: inside; 	/* Keep bullets aligned with text * /
}

									/* Ordered List (Numbers) * /
ol, .mvd-ol {
    list-style-type: decimal; 		/* Default numbered style * /
    list-style-position: inside; 	/* Keep numbers aligned with text * /
}

									/* List Items * /
li, .mvd-li {
    margin-bottom: 4px; 			/* Add a small gap between list items * /
}

									/* Optional: Sub-List Styling * /
ul ul, ol ol {
    margin-left: 25px; 				/* Additional indent for nested lists * /
    list-style-type: circle; 		/* Change bullet style for nested unordered lists * /
    font-size: 9pt; 				/* Slightly smaller text for nested items * /
    color: #666666; 				/* Lighter color for sub-items * /
}
*/

/*-------------------- Links --------------------*/

a {
	color:#1155E0;
	text-decoration:none;
	}

a:visited {
	color:#002D89;
	text-decoration:none;
	}

a:hover {
	text-decoration:underline;
	}


/*-------------------- Others --------------------*/

pre, .mvd-pre {
	font-family: "Courier New",Courier,monospace;
	font-size: 10pt;
    color: #333333;
	background-color:#F5F5F5;

    margin: 12px 32px;
    padding: 8px 16px;

    border: 1px solid #CCCCCC; 		/* Add a border for better delineation */
    border-radius: 4px; 			/* Slight rounding for modern aesthetics */
    overflow-x: auto; 				/* Enable horizontal scrolling for long lines */
	}


listing, .mvd-listing {
	font-family : "Courier New",Courier,monospace;
	font-size : 10pt;
    color: #333333;
    background-color: #FAFAFA;

    padding: 4px 8px;

    border: 1px solid #E0E0E0;
    border-radius: 3px;
	}


table {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 9pt;
    color: #333333;
    border-collapse: collapse;

	margin:0pt;
	padding:0pt;
/*  margin: 12px auto;
    width: 100%;*/
}
/*
table th, table td {
    padding: 8px 12px;
    border: 1px solid #CCCCCC;
    text-align: left;
}

table th {
    background-color: #F4F4F4;
    font-weight: bold;
}
*/

div {
	font-family:Verdana, Arial, Helvetica, sans-serif;
	font-size: 9pt;
    color: #333333;

/*	margin:0pt;
	padding:0pt;*/
    margin: 8px 0;
    padding: 0;

    line-height: 1.6;
	}


citation {
    font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 10pt;
    color: #555555;
	font-style:italic;
    background-color: #F9F9F9;

/*	margin:0pt;
	padding:4pt 6pt 5pt 6pt;*/
    margin: 10px 15px;
    padding: 8px 12px;

    border: 1px solid #CCCCCC;
    border-radius: 4px;
	}


bibliographie {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 10pt;
    color: #333333;
	text-transform:capitalize;
    background-color: #EFF6FF;
	
/*	margin:0pt 0pt 8pt 0pt;
	padding:4pt 5pt 4pt 5pt;
    margin: 8px 0;
    padding: 8px 12px;*/

    border: 1px solid #BFE9FF;
    border-radius: 4px;
    line-height: 1.6;
	}


code {
	font-family:"Courier New",Courier,monospace;
	font-size:10pt;
    color: #E53935;
    background-color: #F7F7F7;

/*	margin:0pt;
	padding:0pt;*/
    padding: 2px 4px;

    border: 1px solid #E0E0E0;
    border-radius: 3px;
	}

  
/*-------------------- Footer --------------------*/

iframe {
    display: block;  	/* Removes extra inline spacing */
    width: 100%;  		/* Makes the iframe take full width of the container */
    height: auto;  		/* Allows height to adjust dynamically */
    border: none;  		/* Removes the black border */
    overflow: hidden;  	/* Prevents any internal scrollbars */

    margin: -30;		/* Hack to eat back the margin */
}

